metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/Calendly__CalendlyLink__c.object-meta.xml
<CustomObject>
    <label>CalendlyLink</label>
    <nameField>
        <label>CalendlyLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>