metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/fields/Calendly__Email__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>