metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/fields/Calendly__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Calendly__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>