metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/fields/Calendly__Name__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>