metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/fields/Calendly__Type__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>profile</fullName>
                <default>true</default>
                <label>profile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>