metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/fields/Calendly__Url__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Url__c</fullName>
    <label>Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>