metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyLink__c/listViews/Calendly__All.listView-meta.xml
<ListView>
    <fullName>Calendly__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Calendly__Name__c</columns>
    <columns>Calendly__Email__c</columns>
    <columns>Calendly__Type__c</columns>
    <columns>Calendly__Url__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>